# glm-art

./: .gitignore  README.md  capture_anaglyph.py  debug_erosion.py  main.py  pyproject.toml  run_web.py  run_web3d.py  test_browser.mjs  test_browser.py
fluviglyph/: __init__.py  erosion.py  extract.py  fluid.py  streamlines.py  web.py  web3d.py  word.py
fluvioglyph/: render.py  web.py  web3d.py  world.py
